# dev-py-monitor-logger-lib

./: README.md  pyproject.toml  setup.py
logger/: __init__.py
monitor_logger_common.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
