[project]
name = "monitor-logger-common"
version = "0.1.0"
description = "Una librería para generar trazas en formato JSON"
authors = [
    { name="Ricardo Marzochi", email="ricardomarzochi@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}

dependencies = [
    "python-json-logger>=2.0.4"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"